[package]
name = "deeptracking-llamaindex"
version = "0.1.0"
edition = "2021"

[lib]
name = "deeptracking_llamaindex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
thiserror = "1.0"
derive_builder = "0.12"
log = "0.4"
env_logger = "0.10"
