[package]
name = "deeptracking-llamaindex"
version = "0.1.0"
edition = "2021"
description = "A code analysis tool that integrates with LlamaIndex for semantic code search"

[lib]
name = "deeptracking_llamaindex"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deeptracking-llamaindex"
path = "src/bin/deeptracking-llamaindex.rs"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.5.22", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
walkdir = "2.5.0"
rayon = "1.10.0"
md5 = "0.7"
thiserror = "2.0.4"
colored = "2.1.0"
indicatif = "0.17.9"
rustyline = "15.0.0"
regex = "1.11.1"
lazy_static = "1.5.0"
derive_builder = "0.20.2"
log = "0.4.22"
env_logger = "0.11.5"
derive_more = { version = "1.0.0", features = ["full"] }
dashmap = "5.5.3"
tokenizers = "0.15.2"
